@@ -14,6 +14,7 @@ import pl.edu.pw.ee.catering.model.order.dto.OrderWithDetails;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -42,7 +43,7 @@ public class CateringCompanyImpl implements ICateringCompany {
 
     @Override
     public OrderList showHistoricalOrderList(Long id) {
-        return new OrderList(Arrays.asList(new OrderWithDetails(1L, "Typical Historical Order",
+        return new OrderList(List.of(new OrderWithDetails(1L, "Typical Historical Order",
                 LocalDateTime.now().toString(), OrderStatus.IN_PREPARATION)));
     }
 
@@ -57,7 +58,7 @@ public class CateringCompanyImpl implements ICateringCompany {
     }
 
     public OrderList showOrderList(Long id) {
-        return new OrderList(Arrays.asList(new OrderWithDetails(1L, "Typical Order",
+        return new OrderList(List.of(new OrderWithDetails(1L, "Typical Order",
                 LocalDateTime.now().toString(), OrderStatus.IN_PREPARATION)));
     }
 
